--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
                                 <a href="#" class="main-nav__link main-nav__link--active">Home</a>
                             </li>
                             <li class="main-nav__item">
-                                <a href="#" class="main-nav__link main-nav__accordion-btn main-nav-collapse" id="level-1">Plants</a>
+                                <a href="./plants.html" class="main-nav__link main-nav__accordion-btn main-nav-collapse" id="level-1">Plants</a>
                                 <ul class="main-nav-submenu main-nav-submenu--big">
                                     <li class="main-nav-submenu__item">
                                         <a href="#" class="main-nav-submenu__link main-nav__accordion-btn" id="level-2">Tables</a>
@@ -199,10 +199,10 @@
                 </ul>
                 <ul class="popular-products__list">
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/01-360x302.jpg" alt="Accusantium Doloremque" class="popular-product-block__img">
-                                <img src="./img/02-360x302.jpg" alt="Accusantium Doloremque" class="popular-product-block__img popular-product-block__img--hover">
+                        <div class="product-block">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/01-360x302.jpg" alt="Accusantium Doloremque" class="product-block__img">
+                                <img src="./img/02-360x302.jpg" alt="Accusantium Doloremque" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -212,7 +212,7 @@
                                     <li class="rating-block__item"></li>
                                     <li class="rating-block__item"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Accusantium Doloremque</a>
                                 </h4>
                                 <p class="price">$104.00</p>
@@ -234,10 +234,10 @@
                         </div>
                     </li>
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/02-360x302.jpg" alt="Aliquam Quaerat" class="popular-product-block__img">
-                                <img src="./img/03-360x302.jpg" alt="Aliquam Quaerat" class="popular-product-block__img popular-product-block__img--hover">
+                        <div class="product-block">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/02-360x302.jpg" alt="Aliquam Quaerat" class="product-block__img">
+                                <img src="./img/03-360x302.jpg" alt="Aliquam Quaerat" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -247,7 +247,7 @@
                                     <li class="rating-block__item"></li>
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Aliquam Quaerat</a>
                                 </h4>
                                 <p class="price">$108.80</p>
@@ -269,11 +269,11 @@
                         </div>
                     </li>
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
+                        <div class="product-block">
                             <div class="sale-sticker">sale</div>
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/03-360x302.jpg" alt="Commodi Consequatur" class="popular-product-block__img">
-                                <img src="./img/04-360x302.jpg" alt="Commodi Consequatur" class="popular-product-block__img popular-product-block__img--hover">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/03-360x302.jpg" alt="Commodi Consequatur" class="product-block__img">
+                                <img src="./img/04-360x302.jpg" alt="Commodi Consequatur" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -283,7 +283,7 @@
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Commodi Consequatur</a>
                                 </h4>
                                 <p class="price">$134.00 <s>$136.40</s></p>
@@ -305,11 +305,11 @@
                         </div>
                     </li>
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
+                        <div class="product-block">
                             <div class="sale-sticker">sale</div>
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/04-360x302.jpg" alt="Consectetur Hampden" class="popular-product-block__img">
-                                <img src="./img/05-360x302.jpg" alt="Consectetur Hampden" class="popular-product-block__img popular-product-block__img--hover">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/04-360x302.jpg" alt="Consectetur Hampden" class="product-block__img">
+                                <img src="./img/05-360x302.jpg" alt="Consectetur Hampden" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -319,7 +319,7 @@
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Consectetur Hampden</a>
                                 </h4>
                                 <p class="price">$110.00 <s>$119.60</s></p>
@@ -341,10 +341,10 @@
                         </div>
                     </li>
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/05-360x302.jpg" alt="Exercitat Virginia" class="popular-product-block__img">
-                                <img src="./img/06-360x302.jpg" alt="Exercitat Virginia" class="popular-product-block__img popular-product-block__img--hover">
+                        <div class="product-block">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/05-360x302.jpg" alt="Exercitat Virginia" class="product-block__img">
+                                <img src="./img/06-360x302.jpg" alt="Exercitat Virginia" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -354,7 +354,7 @@
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Exercitat Virginia</a>
                                 </h4>
                                 <p class="price">$116.00</p>
@@ -376,10 +376,10 @@
                         </div>
                     </li>
                     <li class="popular-products__item">
-                        <div class="popular-product-block">
-                            <a href="#" class="popular-product-block__link">
-                                <img src="./img/06-360x302.jpg" alt="Laborum Eveniet" class="popular-product-block__img">
-                                <img src="./img/11-360x302.jpg" alt="Laborum Eveniet" class="popular-product-block__img popular-product-block__img--hover">
+                        <div class="product-block">
+                            <a href="#" class="product-block__link">
+                                <img src="./img/06-360x302.jpg" alt="Laborum Eveniet" class="product-block__img">
+                                <img src="./img/11-360x302.jpg" alt="Laborum Eveniet" class="product-block__img product-block__img--hover">
                             </a>
                             <div class="product-block-content">
                                 <ul class="rating-block">
@@ -389,7 +389,7 @@
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                     <li class="rating-block__item rating-block__item--empty"></li>
                                 </ul>
-                                <h4 class="popular-product-block__title">
+                                <h4 class="product-block__title">
                                     <a href="#">Laborum Eveniet</a>
                                 </h4>
                                 <p class="price">$97.99</p>
@@ -443,7 +443,7 @@
                                             <li class="rating-block__item"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Aliquam Quaerat</a>
                                         </h4>
                                         <p class="price">$108.80</p>
@@ -475,7 +475,7 @@
                                             <li class="rating-block__item"></li>
                                             <li class="rating-block__item"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Accusantium Doloremque</a>
                                         </h4>
                                         <p class="price">$104.00</p>
@@ -507,7 +507,7 @@
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Praesentium Voluptatum </a>
                                         </h4>
                                         <p class="price">$128.00</p>
@@ -542,7 +542,7 @@
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Consectetur Hampden</a>
                                         </h4>
                                         <p class="price">$110.00 <s>$119.60</s></p>
@@ -574,7 +574,7 @@
                                             <li class="rating-block__item"></li>
                                             <li class="rating-block__item"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Necessitatibus</a>
                                         </h4>
                                         <p class="price">$119.60</p>
@@ -607,7 +607,7 @@
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Neque Porro Quisquam</a>
                                         </h4>
                                         <p class="price">$115.00 <s>$118.00</s></p>
@@ -641,7 +641,7 @@
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Exercitat Virginia</a>
                                         </h4>
                                         <p class="price">$116.00</p>
@@ -673,7 +673,7 @@
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                             <li class="rating-block__item rating-block__item--empty"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Voluptas Assumenda</a>
                                         </h4>
                                         <p class="price">$122.00</p>
@@ -706,7 +706,7 @@
                                             <li class="rating-block__item"></li>
                                             <li class="rating-block__item"></li>
                                         </ul>
-                                        <h4 class="popular-product-block__title">
+                                        <h4 class="product-block__title">
                                             <a href="#">Voluptates Repudiandae</a>
                                         </h4>
                                         <p class="price">$122.00 <s>$140.00</s></p>
