plants-page-tablets

--- a/app/plants.html
+++ b/app/plants.html
@@ -155,12 +155,12 @@
                                 <li class="aside-subcategories__item"><a href="#" class="aside-subcategories__link">Dining</a></li>
                             </ul>
                         </li>
-                        <li class="categories__item"><a href="" class="categories__link">Autotroph</a></li>
-                        <li class="categories__item"><a href="" class="categories__link">Shamrock</a></li>
-                        <li class="categories__item"><a href="" class="categories__link">Highboards</a></li>
-                        <li class="categories__item"><a href="" class="categories__link">Cactus</a></li>
-                        <li class="categories__item"><a href="" class="categories__link">Scissors</a></li>
-                        <li class="categories__item"><a href="" class="categories__link">Clover</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Autotroph</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Shamrock</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Highboards</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Cactus</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Scissors</a></li>
+                        <li class="categories__item"><a href="#" class="categories__link">Clover</a></li>
                     </ul>
                 </div>
                 <div class="filter">
@@ -205,8 +205,8 @@
                                 <input type="checkbox" id="check-10"><label for="check-10">15</label>
                             </div>
                         </li>
+                        <button class="filter__btn">refine search</button>
                     </ul>
-                    <button class="filter__btn">refine search</button>
                 </div>
                 <div class="advertising">
                     <a href="#" class="advertising-block__link">
