--- a/app/plants.html
+++ b/app/plants.html
@@ -314,7 +314,7 @@
                     <ul class="products-block__list">
                         <li class="products-block__item">
                             <div class="product-block">
-                                <a href="#" class="product-block__link">
+                                <a href="./product-page.html" class="product-block__link">
                                     <img src="./img/01-360x302.jpg" alt="Accusantium Doloremque" class="product-block__img">
                                     <img src="./img/02-360x302.jpg" alt="Accusantium Doloremque" class="product-block__img product-block__img--hover">
                                 </a>
