--- a/app/product-page.html
+++ b/app/product-page.html
@@ -280,8 +280,8 @@
                     <li class="product-tabs-info__nav-item"><a href="#" class="product-tabs-info__nav-link">Reviews <span>(1)</span></a></li>
                 </ul>
                 <ul class="products-tabs-info__list">
-                    <li class="products-tabs-info__item">
-                        <p class="products-tabs-info__description active-item">
+                    <li class="products-tabs-info__item active-item">
+                        <p class="products-tabs-info__description">
                             Stop your co-workers in their tracks with 
                             the stunning new 30-inch diagonal HP LP3065 Flat Panel Monitor. 
                             This flagship monitor features best-in-class performance and presentation features on a huge wide-aspect screen 
@@ -290,16 +290,11 @@
                     </li>
                     <li class="products-tabs-info__item">
                         <table class="products-tabs-info__table">
-                            <thead>
                                 <tr>
-                                    <td>
-                                        <strong>
-                                            Memory
-                                        </strong>
+                                    <td class="table-head" colspan="2">
+                                        Memory
                                     </td>
                                 </tr>
-                            </thead>
-                            <tbody>
                                 <tr>
                                     <td>
                                         test 1
@@ -308,20 +303,19 @@
                                         16GB
                                     </td>
                                 </tr>
-                            </tbody>
-                            <thead>
                                 <tr>
-                                    <strong>
+                                    <td class="table-head" colspan="2">
                                         Processor
-                                    </strong>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
                                 <tr>
-                                    <td>No. of Cores</td>
-                                    <td>4</td>
+                                    <td>
+                                        No. of Cores
+                                    </td>
+                                    <td>
+                                        4
+                                    </td>
                                 </tr>
-                            </tbody>
                         </table>
                     </li>
                     <li class="products-tabs-info__item">
@@ -334,7 +328,7 @@
                                             <td>09/03/2017</td>
                                         </tr>
                                         <tr>
-                                            <td>
+                                            <td colspan="2">
                                                 <p class="review-table__text">
                                                     Contrary to popular belief, Lorem Ipsum is not simply random text.
                                                 </p>
@@ -352,7 +346,14 @@
                             </div>
                             <div class="review-alert">
                                 <p class="review-alert__text">
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i>
                                     Thank you for your review. It has been submitted to the webmaster for approval.
+                                </p>
+                            </div>
+                            <div class="review-alert-error">
+                                <p class="review-alert__text">
+                                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                                    Error text
                                 </p>
                             </div>
                             <div class="write-review">
@@ -367,8 +368,8 @@
                                             <span>Note:</span> HTML is not translated!
                                         </p>
                                     </div>
-                                    <label class="write-review__label">Rating</label>
                                     <div class="rating-scale">
+                                        <label class="write-review__label">Rating</label>
                                         <span>Bad</span>
                                         <input type="radio" value="1" name="rating">
                                         <input type="radio" value="2" name="rating">
@@ -670,8 +671,8 @@
                         </div> 
                     </li>
                 </ul>
-                <button class="slider__btn related-products__btn related-products__btn--left"></button>
-                <button class="slider__btn related-products__btn related-products__btn--right"></button>
+                <button class="slider__btn slider__btn--left related-products__btn related-products__btn--left"></button>
+                <button class="slider__btn slider__btn--right related-products__btn related-products__btn--right"></button>
             </div>
             <div class="tags">
                 <p class="tags__text">
