стилизация страницы продукта адаптив

--- a/app/product-page.html
+++ b/app/product-page.html
@@ -744,7 +744,7 @@
                 </div>
             </div>
         </footer>
-
+        <a href="#" class="scroll-top"></a>
     </div>
     <script src="./js/hidden-blocks.js"></script>
     <script src="./js/accordion.js"></script>
